<resources>
    <string name="app_name">RSS Reader</string>
    <string name="ok">OK</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="rsschannels_list_fragment_label">RSS channels list Fragment</string>
    <string name="rsschannel_news_list_fragment_label">RSS channel news list Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="plus">+</string>
    <string name="add_rsschannel_title">Добавление RSS канала</string>
    <string name="add">Добавить</string>
    <string name="enter_address">Введите адрес:</string>
    <string name="enter_address_hint">rss канал</string>
    <string name="enter_address_error">Ошибка ввода адреса</string>
    <string name="del_rsschannel_title">Удалить RSS канал</string>
    <string name="del_rsschannel_hint">Удалить RSS канал %1$s ?</string>
    <string name="del">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="network_error">Ошибка подключения к сети</string>

    <string-array name="defaultChannels">
        <item>https://www.yaplakal.com/news.xml</item>
        <item>https://www.androidauthority.com/feed/</item>
    </string-array>
</resources>