<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/viewitemlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include layout="@layout/add_channel_button" />

</LinearLayout>