<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/add_rsschannel_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_address"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/input_rsschannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/enter_address_hint"
        android:hint="@string/enter_address_hint"
        android:inputType="text">
        <requestFocus />
    </EditText>

</LinearLayout>